# isae-bots-bn-2025

./: README.md
Libs/ISB/: ISB.h
TeensyBRpio/br_controller/: CMakeLists.txt  package.xml  platformio.ini
TeensyBRpio/br_controller/include/: Actuators.hpp  Clock.hpp  PositionFeedback.hpp  configuration.hpp  logging.hpp
TeensyBRpio/br_controller/include/controller/: Arena.hpp  ControllerState.hpp  DisplacementKind.hpp  StateResult.hpp  UnicycleController.hpp
TeensyBRpio/br_controller/include/controller/states/: StateBraking.hpp  StateFullTrajectory.hpp  StateManualControl.hpp  StateRotation.hpp  StateSmoothTrajectory.hpp  (+3 more)
TeensyBRpio/br_controller/include/defines/: constraint.hpp  math.hpp  stl.hpp  string.h  string.hpp
TeensyBRpio/br_controller/include/encoders/: QuadDecode.h
TeensyBRpio/br_controller/include/feedback/: PositionEstimatorOdo.hpp  TwoWheelSimulator.hpp  UnicycleStateSimulator.hpp
TeensyBRpio/br_controller/include/fsm/: PreallocUniquePtr.hpp  StateMachine.hpp
TeensyBRpio/br_controller/include/geometry/: Angle.hpp  Bezier.hpp  CurveSampling.hpp  Position2D.hpp  Speeds.hpp  Vector2D.hpp  WheelSpeeds.hpp
TeensyBRpio/br_controller/include/manager/: ControllerManager.hpp  ManagerState.hpp
TeensyBRpio/br_controller/include/math/: Derivative.hpp  Integral.hpp  LowPassFilter.hpp  Polynomial.hpp  ProportionalIntegralDerivative.hpp  Ramp.hpp  RollingMax.hpp  Samples.hpp
TeensyBRpio/br_controller/include/motors/: MotorStub.hpp  MotorsOdrive2.hpp
TeensyBRpio/br_controller/include/ros/: Dispatcher.hpp  DisplacementOrder.hpp  ROS.hpp  message_cast.hpp  ros_impl.hpp
TeensyBRpio/br_controller/include/rotations/: OrientationProfile.hpp  SetHeadingProfile.hpp
TeensyBRpio/br_controller/include/specializations/: actuators.hpp  alloc.hpp  clock.hpp  feedback.hpp  manager.hpp  ros.hpp
TeensyBRpio/br_controller/include/stl/: PoolAllocator.hpp  PreallocUniquePtr.hpp  SmallDeque.hpp  SystemAllocator.hpp
TeensyBRpio/br_controller/include/trajectories/: BezierTrajectory.hpp  CurveTrajectory.hpp  LinearTrajectory.hpp  MultiCurveTrajectory.hpp  PathTrajectory.hpp  PolygonalTrajectory.hpp  Trajectory.hpp
TeensyBRpio/br_controller/launch/: main_simulation.cpp
TeensyBRpio/br_controller/lib/OdriveArduino/: ODriveArduino.cpp  ODriveArduino.h
TeensyBRpio/br_controller/src/: allocator.cpp  main_arduino.cpp  main_pybind.cpp  main_simulation.cpp
TeensyBRpio/br_controller/src/controller/: UnicycleController.cpp
TeensyBRpio/br_controller/src/encoders/: QuadDecode.cpp
TeensyBRpio/br_controller/src/feedback/: PositionEstimatorOdo.cpp  TwoWheelSimulator.cpp  UnicycleStateSimulator.cpp
TeensyBRpio/br_controller/src/geometry/: Angle.cpp  Bezier.cpp  Position2D.cpp  Speeds.cpp  Vector2D.cpp  WheelSpeeds.cpp
TeensyBRpio/br_controller/src/manager/: ControllerManager.cpp  ManagerState.cpp
TeensyBRpio/br_controller/src/math/: Derivative.cpp  Integral.cpp  LowPassFilter.cpp  Polynomial.cpp  ProportionalIntegralDerivative.cpp  Ramp.cpp  RollingMax.cpp
TeensyBRpio/br_controller/src/motors/: MotorStub.cpp  MotorsOdrive2.cpp
TeensyBRpio/br_controller/src/ros/: Dispatcher.cpp  DisplacementOrder.cpp  ROS.cpp
TeensyBRpio/br_controller/src/rotations/: SetHeadingProfile.cpp
TeensyBRpio/br_controller/src/trajectories/: BezierTrajectory.cpp  LinearTrajectory.cpp  PathTrajectory.cpp  PolygonalTrajectory.cpp  Trajectory.cpp
TeensyBRpio/br_controller/test/: TableTransform.hpp  Window.hpp  logging.cpp  test_curve.cpp  test_logging.cpp  test_logging.hpp  test_sampling.cpp  test_speed_control.cpp
TeensyBRpio/br_controller/test/drawables/: BezierDrawable.hpp  BezierTrajectoryDrawable.hpp  Joystick.hpp  PointDrawable.hpp  RobotDrawable.hpp  TrajectoryDrawable.hpp
TeensyBRpio/br_controller/test/optim/: CurveParameters.hpp  optim.hpp
(+256 files in other folders)
